Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136257

QtWebEngine based browser shows nothing with panthor driver

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.2, 6.10.0 Beta3
    • 6.9.0
    • WebEngine
    • None
    • Linux/Wayland
    • 2ed5f9632 (dev), ddcd30454 (6.9), bcee2dbf4 (dev), 2c15c762b (6.10), 9168bc6f5 (6.9), 3cc88e0f8 (dev), ac20cd91b (6.10), 22bf04122 (6.10.0)

      Very similar issue to QTBUG-136160 – QtWebEngine based qutebrowser shows nothing after upgrade but with very recent Mesa driver "panthor" for  ARM devices like Mali G610 found in RK3588 based Radxa Rock 5B board.

      It appears the place where it fails is also different. Unfortunately I don't have debuginfo for WebEngine (it's already hard to build it without them) but I can provide functions/values higher up in stack:

      (gdb) bt
      #0  0x0000ffffe1d1f2cc in drmPrimeHandleToFD () from /usr/lib64/libdrm.so.2
      #1  0x0000ffffa39d93fc in pan_kmod_bo_export (bo=0x1aa6710) at ../src/panfrost/lib/kmod/pan_kmod.h:568
      #2  0x0000ffffa39da500 in panfrost_bo_export (bo=0x1445140) at ../src/gallium/drivers/panfrost/pan_bo.c:543
      #3  0x0000ffffa39df730 in panfrost_resource_get_handle (pscreen=0x1441ff0, ctx=0x0, pt=0x1aa62b0, handle=0xffffffffd268, usage=2) at ../src/gallium/drivers/panfrost/pan_resource.c:195
      #4  0x0000ffffa295caa0 in dri2_query_image_by_resource_handle (image=0x1aa67e0, attrib=8199, value=0xffffffffd530) at ../src/gallium/frontends/dri/dri2.c:1246
      #5  0x0000ffffa295d060 in dri2_query_image (image=0x1aa67e0, attrib=8199, value=0xffffffffd530) at ../src/gallium/frontends/dri/dri2.c:1372
      #6  0x0000ffffb189023c in dri2_export_dma_buf_image_mesa (disp=0x1436a20, img=0x1aa67b0, fds=0xffffffffd530, strides=0x0, offsets=0x0) at ../src/egl/drivers/dri2/egl_dri2.c:2768
      #7  0x0000ffffb1880714 in eglExportDMABUFImageMESA (dpy=0x1436a20, image=0x1aa67b0, fds=0xffffffffd530, strides=0x0, offsets=0x0) at ../src/egl/main/eglapi.c:2521
      #8  0x0000ffffb1877ca8 in dispatch_eglExportDMABUFImageMESA (dpy=0x1436a20, image=0x1aa67b0, fds=0xffffffffd530, strides=0x0, offsets=0x0) at src/egl/g_egldispatchstubs.c:131
      #9  0x0000ffffe4a0fc3c in ?? () from /usr/lib64/libQt6WebEngineCore.so.6
      

      and only following error is logged:

      MESA: error: drmPrimeHandleToFD() failed (err=22)
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pvarga Peter Varga
            jpalus Jan Palus
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: